--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sistematização da Assistência de Enfermagem (SAE)</title>
+    <title>SAE - Sistematização da Assistência de Enfermagem</title>
     <link rel="icon" href="1.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,44 +19,84 @@
 
     <main>
         <section id="introducao" class="introducao">
-            <h2>O que é a SAE?</h2>
-            <p>A Sistematização da Assistência de Enfermagem (SAE) é uma metodologia que organiza o trabalho da enfermagem, garantindo cuidados seguros, eficazes e individualizados. Prevista pela legislação, a SAE fortalece o papel do enfermeiro e contribui para a qualidade da assistência prestada.</p>
-            <img src="imagem1-1080x720.webp" alt="Profissionais de saúde cuidando de paciente" class="imagem-borda">
-
-            <p>Ela orienta o raciocínio clínico e a tomada de decisões, promovendo uma assistência baseada em evidências. A SAE também facilita a comunicação entre os profissionais e permite o acompanhamento da evolução do paciente.</p>
+            <h2>O que é SAE?</h2>
+            <p>A Sistematização da Assistência de Enfermagem (SAE) é uma ferramenta fundamental para a organização do trabalho profissional da enfermagem. Ela orienta o cuidado individualizado, documenta a prática e fortalece a identidade da profissão.</p>
         </section>
 
-        <section id="oque-e" class="oque-e">
-            <h2>Quais são as 5 Etapas da SAE?</h2>
-            <p>A SAE é composta por cinco etapas sistemáticas, que permitem o planejamento e execução dos cuidados de enfermagem de forma segura e organizada:</p>
+        <section id="etapas" class="etapas">
+            <h2>Quais são as 5 etapas da SAE?</h2>
             <ul>
-                <li><strong>1. Coleta de Dados (Histórico de Enfermagem):</strong> Coleta de informações subjetivas e objetivas do paciente para entender sua condição clínica.</li>
-                <li><strong>2. Diagnóstico de Enfermagem:</strong> Interpretação dos dados coletados para identificar os problemas reais ou potenciais de saúde. Essa etapa é exclusiva do enfermeiro.</li>
-                <li><strong>3. Planejamento:</strong> Definição das prioridades, metas e intervenções de enfermagem que serão executadas.</li>
-                <li><strong>4. Implementação:</strong> Execução das ações planejadas, como administração de medicamentos, cuidados diretos e orientações.</li>
-                <li><strong>5. Avaliação:</strong> Análise dos resultados obtidos e, se necessário, reformulação do plano de cuidados.</li>
+                <li><strong>1. Coleta de dados (ou histórico de enfermagem):</strong> Levantamento de informações sobre o paciente.</li>
+                <li><strong>2. Diagnóstico de enfermagem:</strong> Julgamento clínico sobre as respostas humanas às condições de saúde.</li>
+                <li><strong>3. Planejamento:</strong> Estabelecimento de objetivos e estratégias de cuidados.</li>
+                <li><strong>4. Implementação:</strong> Execução das ações planejadas.</li>
+                <li><strong>5. Avaliação:</strong> Verificação dos resultados e replanejamento, se necessário.</li>
             </ul>
-            <img src="imagem2-1000x714.jpg" alt="Representação das etapas da SAE" class="imagem-borda">
         </section>
 
         <section id="beneficios" class="beneficios">
-            <h2>Por que entender a SAE é importante?</h2>
+            <h2>Benefícios da SAE na Qualidade do Cuidado</h2>
+            <p>A implementação efetiva da SAE contribui significativamente para a melhoria da qualidade da assistência de enfermagem. Ao sistematizar o cuidado, os profissionais conseguem aplicar conhecimentos teóricos na prática, promovendo uma assistência mais segura e eficaz. Além disso, a SAE fortalece o vínculo entre enfermeiros e pacientes, resultando em uma relação mais humanizada e centrada nas necessidades individuais.</p>
+            <p><strong>Fonte:</strong> <a href="https://www.scielo.br/j/rgenf/a/JFrrJZZtSQ7t45jGbbdvrjk" target="_blank">Revista Gaúcha de Enfermagem - SciELO</a></p>
+        </section>
+
+        <section id="desafios" class="desafios">
+            <h2>Desafios na Implementação da SAE</h2>
+            <p>Apesar dos benefícios, a implementação da SAE enfrenta obstáculos, como a sobrecarga de trabalho dos enfermeiros, falta de recursos humanos e insuficiente apoio institucional. Esses fatores dificultam a aplicação adequada das etapas da SAE, comprometendo a qualidade do cuidado prestado. A ausência de capacitação contínua e a resistência a mudanças também são barreiras significativas.</p>
+            <p><strong>Fonte:</strong> <a href="https://www.scielo.br/j/ean/a/hCMd9nm7tSRS7WzfdSBMFxF" target="_blank">Escola Anna Nery - SciELO</a></p>
+        </section>
+
+        <section id="educacao" class="educacao">
+            <h2>Importância da Capacitação e Educação Continuada</h2>
+            <p>A capacitação dos profissionais de enfermagem é fundamental para a efetiva implementação da SAE. Programas de educação continuada e treinamentos específicos sobre as etapas da SAE e o uso de classificações padronizadas, como NANDA, NIC e NOC, são essenciais para aprimorar a prática clínica. Estudos indicam que a formação adequada dos enfermeiros está diretamente relacionada à qualidade da assistência e à satisfação dos pacientes.</p>
+            <p><strong>Fonte:</strong> <a href="https://seer.unirio.br/cuidadofundamental/article/view/1082" target="_blank">Revista de Pesquisa Cuidado é Fundamental - UNIRIO</a></p>
+        </section>
+
+        <section id="equipe" class="equipe">
+            <h2>Participação da Equipe de Enfermagem na SAE</h2>
+            <p>A integração de toda a equipe de enfermagem, incluindo técnicos e auxiliares, no processo de SAE é crucial para o sucesso da sistematização do cuidado. No entanto, pesquisas revelam que muitos profissionais de nível médio desconhecem sua participação nas etapas da SAE, evidenciando a necessidade de maior envolvimento e esclarecimento sobre suas funções dentro do processo.</p>
+            <p><strong>Fonte:</strong> <a href="https://www.scielo.br/j/ean/a/7swh6wDYxNqbsVrprBF7CcN" target="_blank">Escola Anna Nery - SciELO</a></p>
+        </section>
+
+        <section id="caso" class="caso">
+            <h2>Estudo de Caso: Dona Elza</h2>
+            <p>Dona Elza, 82 anos, viúva, reside com a neta de 25 anos. É portadora de hipertensão arterial sistêmica, início de demência leve e osteoartrite nos joelhos. A neta levou a paciente à unidade de saúde após uma queda em casa, durante a noite. Dona Elza relata dores nos joelhos, cansaço e episódios de confusão. Apesar de usar os medicamentos prescritos, esquece frequentemente os horários. Nega febre, mas apresenta edemas em membros inferiores. Dados do exame: PA 150/92 mmHg, FC 90 bpm, FR 20 irpm, T 36,4°C. Refere sono não reparador.</p>
+            <p>Esse estudo de caso exemplifica a importância da SAE na identificação de diagnósticos de enfermagem como risco de quedas, confusão mental, dor crônica e padrões de sono perturbado. Intervenções incluem orientação sobre a medicação, medidas para segurança domiciliar, avaliação contínua da cognição e controle da dor.</p>
+            <h3>Questões da SAE sobre o caso:</h3>
             <ul>
-                <li><strong>Porque melhora a qualidade da assistência:</strong> A SAE garante cuidados mais seguros, baseados em critérios técnicos e científicos.</li>
-                <li><strong>Porque valoriza o profissional de enfermagem:</strong> Ao sistematizar a assistência, o enfermeiro assume papel central no planejamento do cuidado.</li>
-                <li><strong>Porque promove o trabalho em equipe:</strong> A SAE melhora a comunicação entre os membros da equipe de saúde.</li>
-                <li><strong>Porque ajuda na tomada de decisões:</strong> Permite identificar rapidamente necessidades e avaliar os efeitos das intervenções.</li>
-                <li><strong>Porque organiza o cuidado:</strong> Facilita registros, continuidade da assistência e auditorias de qualidade.</li>
+                <li><strong>1. Dados subjetivos e objetivos:</strong> 
+                    <ul>
+                        <li><strong>Subjetivos:</strong> dores nos joelhos, cansaço, confusão, sono não reparador.</li>
+                        <li><strong>Objetivos:</strong> 82 anos, hipertensa, demência leve, osteoartrite, queda, edemas, PA 150/92 mmHg, FC 90 bpm, FR 20 irpm, T 36,4°C.</li>
+                    </ul>
+                </li>
+                <li><strong>2. Metas esperadas:</strong> Reduzir risco de quedas, aliviar dor, melhorar sono, aumentar adesão à medicação, reduzir confusão, prevenir complicações.</li>
+                <li><strong>3. Intervenções de enfermagem:</strong> orientar sobre medicação, monitorar sinais vitais, implantar medidas de segurança, avaliar cognição, encaminhar para fisioterapia, escuta ativa.</li>
+                <li><strong>4. Avaliação da eficácia:</strong> reavaliar sono e cognição, verificar adesão à medicação, ocorrência de quedas, sinais vitais e edemas.</li>
+                <li><strong>5. Envolvimento da família:</strong> orientar neta sobre cuidados, medicação, segurança, participação nas intervenções.</li>
+                <li><strong>6. Orientações ao paciente:</strong> tomar medicação corretamente, evitar quedas, manter rotina de sono, atividades cognitivas, procurar ajuda em caso de piora.</li>
             </ul>
+            <p><strong>Fonte:</strong> Estudo de caso apresentado em sala de aula (2025).</p>
+        </section>
+
+        <section id="referencias" class="referencias">
+            <h2>Referências</h2>
+            <p>ROSSETTO, Édina Gonçalves et al. <strong>Percepção de enfermeiros sobre os benefícios da Sistematização da Assistência de Enfermagem.</strong> Revista Gaúcha de Enfermagem, Porto Alegre, v. 36, n. 2, p. 102-109, 2015. Disponível em: <a href="https://www.scielo.br/j/rgenf/a/JFrrJZZtSQ7t45jGbbdvrjk" target="_blank">https://www.scielo.br/j/rgenf/a/JFrrJZZtSQ7t45jGbbdvrjk</a>. Acesso em: 23 maio 2025.</p>
+
+            <p>BERNARDES, André Luís Ferreira et al. <strong>Desafios enfrentados pelos enfermeiros na implementação da Sistematização da Assistência de Enfermagem.</strong> Escola Anna Nery, Rio de Janeiro, v. 21, n. 4, p. 1-6, 2017. Disponível em: <a href="https://www.scielo.br/j/ean/a/hCMd9nm7tSRS7WzfdSBMFxF" target="_blank">https://www.scielo.br/j/ean/a/hCMd9nm7tSRS7WzfdSBMFxF</a>. Acesso em: 23 maio 2025.</p>
+
+            <p>SANTOS, Milena Gomes dos et al. <strong>Educação permanente em saúde e sua contribuição para a SAE.</strong> Revista de Pesquisa Cuidado é Fundamental Online, Rio de Janeiro, v. 7, n. 2, p. 2502-2512, 2015. Disponível em: <a href="https://seer.unirio.br/cuidadofundamental/article/view/1082" target="_blank">https://seer.unirio.br/cuidadofundamental/article/view/1082</a>. Acesso em: 23 maio 2025.</p>
+
+            <p>SOUSA, Camila de Araújo et al. <strong>Participação da equipe de enfermagem na Sistematização da Assistência de Enfermagem.</strong> Escola Anna Nery, Rio de Janeiro, v. 23, n. 2, p. e20180169, 2019. Disponível em: <a href="https://www.scielo.br/j/ean/a/7swh6wDYxNqbsVrprBF7CcN" target="_blank">https://www.scielo.br/j/ean/a/7swh6wDYxNqbsVrprBF7CcN</a>. Acesso em: 23 maio 2025.</p>
+
+            <p>Estudo de caso apresentado em aula de Enfermagem. <strong>Dona Elza - SAE aplicada à prática clínica.</strong> Santa Catarina: SENAC, 2025.</p>
         </section>
 
         <section id="contato" class="contato">
             <h2>Entre em contato conosco</h2>
-            <p>Se você quiser saber mais sobre a Sistematização da Assistência de Enfermagem. <a href="https://drive.google.com/drive/folders/1HnufAT94g8kF9NoVHUaKg0Iici0T-e89?usp=sharing">clique aqui para acessar nosso material completo</a> ou envie uma mensagem pelos canais abaixo.</p>
+            <p>Quer saber mais sobre a SAE? <a href="https://drive.google.com/drive/folders/1HnufAT94g8kF9NoVHUaKg0Iici0T-e89?usp=sharing">Clique aqui para acessar nosso material completo</a> ou envie uma mensagem pelos canais abaixo:</p>
 
             <p><a href="mailto:mikael.k@outlook.com.br">mikael.k@outlook.com.br</a></p>
-
-            <p>Ou ligue para:</p>
             <p>(66) 98444-3942</p>
 
             <form action="https://formspree.io/f/movdnrlj" method="POST">
@@ -69,7 +109,7 @@
                 <label for="telefone">Telefone:</label>
                 <input type="tel" id="telefone" name="telefone">
 
-                <label for="duvida">Tem alguma dúvida sobre a SAE?</label>
+                <label for="duvida">Tem alguma dúvida sobre SAE?</label>
                 <textarea id="duvida" name="duvida"></textarea>
 
                 <button type="submit">Enviar</button>
