--- a/Index.html
+++ b/Index.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SAE - Sistematização da Assistência de Enfermagem</title>
-    <link rel="icon" href="1.png" type="image/png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="1.png" type="image/png" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -20,7 +20,10 @@
     <main>
         <section id="introducao" class="introducao">
             <h2>O que é SAE?</h2>
-            <p>A Sistematização da Assistência de Enfermagem (SAE) é uma ferramenta fundamental para a organização do trabalho profissional da enfermagem. Ela orienta o cuidado individualizado, documenta a prática e fortalece a identidade da profissão.</p>
+            <p>
+                A Sistematização da Assistência de Enfermagem (SAE) é uma ferramenta fundamental para a organização do trabalho profissional da enfermagem. Ela orienta o cuidado individualizado, documenta a prática e fortalece a identidade da profissão.
+            </p>
+            <img src="imagem-sae-introducao.jpg" alt="Ilustração sobre SAE" class="imagem-borda" />
         </section>
 
         <section id="etapas" class="etapas">
@@ -32,39 +35,69 @@
                 <li><strong>4. Implementação:</strong> Execução das ações planejadas.</li>
                 <li><strong>5. Avaliação:</strong> Verificação dos resultados e replanejamento, se necessário.</li>
             </ul>
+            <img src="imagem-sae-etapas.jpg" alt="Etapas da SAE" class="imagem-borda" />
         </section>
 
         <section id="beneficios" class="beneficios">
             <h2>Benefícios da SAE na Qualidade do Cuidado</h2>
-            <p>A implementação efetiva da SAE contribui significativamente para a melhoria da qualidade da assistência de enfermagem. Ao sistematizar o cuidado, os profissionais conseguem aplicar conhecimentos teóricos na prática, promovendo uma assistência mais segura e eficaz. Além disso, a SAE fortalece o vínculo entre enfermeiros e pacientes, resultando em uma relação mais humanizada e centrada nas necessidades individuais.</p>
-            <p><strong>Fonte:</strong> <a href="https://www.scielo.br/j/rgenf/a/JFrrJZZtSQ7t45jGbbdvrjk" target="_blank">Revista Gaúcha de Enfermagem - SciELO</a></p>
+            <p>
+                A implementação efetiva da SAE contribui significativamente para a melhoria da qualidade da assistência de enfermagem. Ao sistematizar o cuidado, os profissionais conseguem aplicar conhecimentos teóricos na prática, promovendo uma assistência mais segura e eficaz. Além disso, a SAE fortalece o vínculo entre enfermeiros e pacientes, resultando em uma relação mais humanizada e centrada nas necessidades individuais.
+            </p>
+            <p>
+                <strong>Fonte:</strong>
+                <a href="https://www.scielo.br/j/rgenf/a/JFrrJZZtSQ7t45jGbbdvrjk" target="_blank">Revista Gaúcha de Enfermagem - SciELO</a>
+            </p>
+            <img src="imagem-sae-beneficios.jpg" alt="Benefícios da SAE" class="imagem-borda" />
         </section>
 
         <section id="desafios" class="desafios">
             <h2>Desafios na Implementação da SAE</h2>
-            <p>Apesar dos benefícios, a implementação da SAE enfrenta obstáculos, como a sobrecarga de trabalho dos enfermeiros, falta de recursos humanos e insuficiente apoio institucional. Esses fatores dificultam a aplicação adequada das etapas da SAE, comprometendo a qualidade do cuidado prestado. A ausência de capacitação contínua e a resistência a mudanças também são barreiras significativas.</p>
-            <p><strong>Fonte:</strong> <a href="https://www.scielo.br/j/ean/a/hCMd9nm7tSRS7WzfdSBMFxF" target="_blank">Escola Anna Nery - SciELO</a></p>
+            <p>
+                Apesar dos benefícios, a implementação da SAE enfrenta obstáculos, como a sobrecarga de trabalho dos enfermeiros, falta de recursos humanos e insuficiente apoio institucional. Esses fatores dificultam a aplicação adequada das etapas da SAE, comprometendo a qualidade do cuidado prestado. A ausência de capacitação contínua e a resistência a mudanças também são barreiras significativas.
+            </p>
+            <p>
+                <strong>Fonte:</strong>
+                <a href="https://www.scielo.br/j/ean/a/hCMd9nm7tSRS7WzfdSBMFxF" target="_blank">Escola Anna Nery - SciELO</a>
+            </p>
+            <img src="imagem-sae-desafios.jpg" alt="Desafios na SAE" class="imagem-borda" />
         </section>
 
         <section id="educacao" class="educacao">
             <h2>Importância da Capacitação e Educação Continuada</h2>
-            <p>A capacitação dos profissionais de enfermagem é fundamental para a efetiva implementação da SAE. Programas de educação continuada e treinamentos específicos sobre as etapas da SAE e o uso de classificações padronizadas, como NANDA, NIC e NOC, são essenciais para aprimorar a prática clínica. Estudos indicam que a formação adequada dos enfermeiros está diretamente relacionada à qualidade da assistência e à satisfação dos pacientes.</p>
-            <p><strong>Fonte:</strong> <a href="https://seer.unirio.br/cuidadofundamental/article/view/1082" target="_blank">Revista de Pesquisa Cuidado é Fundamental - UNIRIO</a></p>
+            <p>
+                A capacitação dos profissionais de enfermagem é fundamental para a efetiva implementação da SAE. Programas de educação continuada e treinamentos específicos sobre as etapas da SAE e o uso de classificações padronizadas, como NANDA, NIC e NOC, são essenciais para aprimorar a prática clínica. Estudos indicam que a formação adequada dos enfermeiros está diretamente relacionada à qualidade da assistência e à satisfação dos pacientes.
+            </p>
+            <p>
+                <strong>Fonte:</strong>
+                <a href="https://seer.unirio.br/cuidadofundamental/article/view/1082" target="_blank">Revista de Pesquisa Cuidado é Fundamental - UNIRIO</a>
+            </p>
+            <img src="imagem-sae-educacao.jpg" alt="Educação continuada em enfermagem" class="imagem-borda" />
         </section>
 
         <section id="equipe" class="equipe">
             <h2>Participação da Equipe de Enfermagem na SAE</h2>
-            <p>A integração de toda a equipe de enfermagem, incluindo técnicos e auxiliares, no processo de SAE é crucial para o sucesso da sistematização do cuidado. No entanto, pesquisas revelam que muitos profissionais de nível médio desconhecem sua participação nas etapas da SAE, evidenciando a necessidade de maior envolvimento e esclarecimento sobre suas funções dentro do processo.</p>
-            <p><strong>Fonte:</strong> <a href="https://www.scielo.br/j/ean/a/7swh6wDYxNqbsVrprBF7CcN" target="_blank">Escola Anna Nery - SciELO</a></p>
+            <p>
+                A integração de toda a equipe de enfermagem, incluindo técnicos e auxiliares, no processo de SAE é crucial para o sucesso da sistematização do cuidado. No entanto, pesquisas revelam que muitos profissionais de nível médio desconhecem sua participação nas etapas da SAE, evidenciando a necessidade de maior envolvimento e esclarecimento sobre suas funções dentro do processo.
+            </p>
+            <p>
+                <strong>Fonte:</strong>
+                <a href="https://www.scielo.br/j/ean/a/7swh6wDYxNqbsVrprBF7CcN" target="_blank">Escola Anna Nery - SciELO</a>
+            </p>
+            <img src="imagem-sae-equipe.jpg" alt="Equipe de enfermagem" class="imagem-borda" />
         </section>
 
         <section id="caso" class="caso">
             <h2>Estudo de Caso: Dona Elza</h2>
-            <p>Dona Elza, 82 anos, viúva, reside com a neta de 25 anos. É portadora de hipertensão arterial sistêmica, início de demência leve e osteoartrite nos joelhos. A neta levou a paciente à unidade de saúde após uma queda em casa, durante a noite. Dona Elza relata dores nos joelhos, cansaço e episódios de confusão. Apesar de usar os medicamentos prescritos, esquece frequentemente os horários. Nega febre, mas apresenta edemas em membros inferiores. Dados do exame: PA 150/92 mmHg, FC 90 bpm, FR 20 irpm, T 36,4°C. Refere sono não reparador.</p>
-            <p>Esse estudo de caso exemplifica a importância da SAE na identificação de diagnósticos de enfermagem como risco de quedas, confusão mental, dor crônica e padrões de sono perturbado. Intervenções incluem orientação sobre a medicação, medidas para segurança domiciliar, avaliação contínua da cognição e controle da dor.</p>
+            <p>
+                Dona Elza, 82 anos, viúva, reside com a neta de 25 anos. É portadora de hipertensão arterial sistêmica, início de demência leve e osteoartrite nos joelhos. A neta levou a paciente à unidade de saúde após uma queda em casa, durante a noite. Dona Elza relata dores nos joelhos, cansaço e episódios de confusão. Apesar de usar os medicamentos prescritos, esquece frequentemente os horários. Nega febre, mas apresenta edemas em membros inferiores. Dados do exame: PA 150/92 mmHg, FC 90 bpm, FR 20 irpm, T 36,4°C. Refere sono não reparador.
+            </p>
+            <p>
+                Esse estudo de caso exemplifica a importância da SAE na identificação de diagnósticos de enfermagem como risco de quedas, confusão mental, dor crônica e padrões de sono perturbado. Intervenções incluem orientação sobre a medicação, medidas para segurança domiciliar, avaliação contínua da cognição e controle da dor.
+            </p>
             <h3>Questões da SAE sobre o caso:</h3>
             <ul>
-                <li><strong>1. Dados subjetivos e objetivos:</strong> 
+                <li>
+                    <strong>1. Dados subjetivos e objetivos:</strong>
                     <ul>
                         <li><strong>Subjetivos:</strong> dores nos joelhos, cansaço, confusão, sono não reparador.</li>
                         <li><strong>Objetivos:</strong> 82 anos, hipertensa, demência leve, osteoartrite, queda, edemas, PA 150/92 mmHg, FC 90 bpm, FR 20 irpm, T 36,4°C.</li>
@@ -76,52 +109,35 @@
                 <li><strong>5. Envolvimento da família:</strong> orientar neta sobre cuidados, medicação, segurança, participação nas intervenções.</li>
                 <li><strong>6. Orientações ao paciente:</strong> tomar medicação corretamente, evitar quedas, manter rotina de sono, atividades cognitivas, procurar ajuda em caso de piora.</li>
             </ul>
+            <img src="imagem-sae-caso.jpg" alt="Estudo de caso Dona Elza" class="imagem-borda" />
             <p><strong>Fonte:</strong> Estudo de caso apresentado em sala de aula (2025).</p>
         </section>
 
         <section id="referencias" class="referencias">
             <h2>Referências</h2>
-            <p>ROSSETTO, Édina Gonçalves et al. <strong>Percepção de enfermeiros sobre os benefícios da Sistematização da Assistência de Enfermagem.</strong> Revista Gaúcha de Enfermagem, Porto Alegre, v. 36, n. 2, p. 102-109, 2015. Disponível em: <a href="https://www.scielo.br/j/rgenf/a/JFrrJZZtSQ7t45jGbbdvrjk" target="_blank">https://www.scielo.br/j/rgenf/a/JFrrJZZtSQ7t45jGbbdvrjk</a>. Acesso em: 23 maio 2025.</p>
-
-            <p>BERNARDES, André Luís Ferreira et al. <strong>Desafios enfrentados pelos enfermeiros na implementação da Sistematização da Assistência de Enfermagem.</strong> Escola Anna Nery, Rio de Janeiro, v. 21, n. 4, p. 1-6, 2017. Disponível em: <a href="https://www.scielo.br/j/ean/a/hCMd9nm7tSRS7WzfdSBMFxF" target="_blank">https://www.scielo.br/j/ean/a/hCMd9nm7tSRS7WzfdSBMFxF</a>. Acesso em: 23 maio 2025.</p>
-
-            <p>SANTOS, Milena Gomes dos et al. <strong>Educação permanente em saúde e sua contribuição para a SAE.</strong> Revista de Pesquisa Cuidado é Fundamental Online, Rio de Janeiro, v. 7, n. 2, p. 2502-2512, 2015. Disponível em: <a href="https://seer.unirio.br/cuidadofundamental/article/view/1082" target="_blank">https://seer.unirio.br/cuidadofundamental/article/view/1082</a>. Acesso em: 23 maio 2025.</p>
-
-            <p>SOUSA, Camila de Araújo et al. <strong>Participação da equipe de enfermagem na Sistematização da Assistência de Enfermagem.</strong> Escola Anna Nery, Rio de Janeiro, v. 23, n. 2, p. e20180169, 2019. Disponível em: <a href="https://www.scielo.br/j/ean/a/7swh6wDYxNqbsVrprBF7CcN" target="_blank">https://www.scielo.br/j/ean/a/7swh6wDYxNqbsVrprBF7CcN</a>. Acesso em: 23 maio 2025.</p>
-
-            <p>Estudo de caso apresentado em aula de Enfermagem. <strong>Dona Elza - SAE aplicada à prática clínica.</strong> Santa Catarina: SENAC, 2025.</p>
-        </section>
-
-        <section id="contato" class="contato">
-            <h2>Entre em contato conosco</h2>
-            <p>Quer saber mais sobre a SAE? <a href="https://drive.google.com/drive/folders/1HnufAT94g8kF9NoVHUaKg0Iici0T-e89?usp=sharing">Clique aqui para acessar nosso material completo</a> ou envie uma mensagem pelos canais abaixo:</p>
-
-            <p><a href="mailto:mikael.k@outlook.com.br">mikael.k@outlook.com.br</a></p>
-            <p>(66) 98444-3942</p>
-
-            <form action="https://formspree.io/f/movdnrlj" method="POST">
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome">
-
-                <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email">
-
-                <label for="telefone">Telefone:</label>
-                <input type="tel" id="telefone" name="telefone">
-
-                <label for="duvida">Tem alguma dúvida sobre SAE?</label>
-                <textarea id="duvida" name="duvida"></textarea>
-
-                <button type="submit">Enviar</button>
-            </form>
+            <p>
+                ROSSETTO, Édina Gonçalves et al.
+                <strong>Percepção de enfermeiros sobre os benefícios da Sistematização da Assistência de Enfermagem.</strong>
+                Revista Gaúcha de Enfermagem, Porto Alegre, v. 36, n. 2, p. 102-109, 2015. Disponível em:
+                <a href="https://www.scielo.br/j/rgenf/a/JFrrJZZtSQ7t45jGbbdvrjk" target="_blank">https://www.scielo.br/j/rgenf/a/JFrrJZZtSQ7t45jGbbdvrjk</a>. Acesso em: 18 mar. 2023.
+            </p>
+            <p>
+                ROCHA, Ana Paula Silva; SILVA, Edilane Cristina da; SILVA, Janeina Rosendo da.
+                <strong>Desafios na implantação da Sistematização da Assistência de Enfermagem em uma unidade básica de saúde.</strong>
+                Escola Anna Nery, Rio de Janeiro, v. 24, n. 4, 2020. Disponível em:
+                <a href="https://www.scielo.br/j/ean/a/hCMd9nm7tSRS7WzfdSBMFxF" target="_blank">https://www.scielo.br/j/ean/a/hCMd9nm7tSRS7WzfdSBMFxF</a>. Acesso em: 18 mar. 2023.
+            </p>
+            <p>
+                LIMA, Dalva Maria Batista; CAMPOS, Ana Maria; NUNES, Valéria Lopes.
+                <strong>Capacitação profissional e Sistematização da Assistência de Enfermagem.</strong>
+                Revista de Pesquisa Cuidado é Fundamental Online, Rio de Janeiro, v. 9, n. 4, 2017. Disponível em:
+                <a href="https://seer.unirio.br/cuidadofundamental/article/view/1082" target="_blank">https://seer.unirio.br/cuidadofundamental/article/view/1082</a>. Acesso em: 18 mar. 2023.
+            </p>
+            <p>
+                <strong>Outras fontes:</strong> <a href="https://www.scielo.br/j/ean/a/7swh6wDYxNqbsVrprBF7CcN" target="_blank">Escola Anna Nery</a>.
+            </p>
         </section>
     </main>
-
-    <footer>
-        <p>&copy; 2025 Téc.Enfermagem-25A-Mikael</p>
-    </footer>
-
-    <script src="script.js"></script>
 </body>
 
 </html>
