--- a/Index.html
+++ b/Index.html
@@ -137,7 +137,39 @@
                 <strong>Outras fontes:</strong> <a href="https://www.scielo.br/j/ean/a/7swh6wDYxNqbsVrprBF7CcN" target="_blank">Escola Anna Nery</a>.
             </p>
         </section>
+
+        <section id="contato" class="contato">
+            <h2>Entre em contato conosco</h2>
+            <p>Se você quiser saber mais sobre SAE ou segurança do paciente. <a href="https://drive.google.com/drive/folders/1HnufAT94g8kF9NoVHUaKg0Iici0T-e89?usp=sharing">clique aqui para acessar nosso material completo</a> ou envie uma mensagem pelos canais abaixo.</p>
+
+            <p><a href="mailto:mikael.k@outlook.com.br">mikael.k@outlook.com.br</a></p>
+        
+            <p>Ou ligue para:</p>
+            <p>(66) 98444-3942</p>
+
+            <form action="https://formspree.io/f/movdnrlj" method="POST">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome">
+
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email">
+
+                <label for="telefone">Telefone:</label>
+                <input type="tel" id="telefone" name="telefone">
+
+                <label for="duvida">Tem alguma dúvida sobre SAE ou segurança do paciente?</label>
+                <textarea id="duvida" name="duvida"></textarea>
+
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
     </main>
+
+    <footer>
+        <p>&copy; 2025 Téc.Enfermagem-25A-Mikael</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
