--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
                 <li><strong>4. Implementação:</strong> Execução das ações planejadas.</li>
                 <li><strong>5. Avaliação:</strong> Verificação dos resultados e replanejamento, se necessário.</li>
             </ul>
-            <img src="imagem-sae-etapas.jpg" alt="Etapas da SAE" class="imagem-borda" />
+            <img src="imagem-sae-etapas.jpeg" alt="Etapas da SAE" class="imagem-borda" />
         </section>
 
         <section id="beneficios" class="beneficios">
@@ -47,7 +47,7 @@
                 <strong>Fonte:</strong>
                 <a href="https://www.scielo.br/j/rgenf/a/JFrrJZZtSQ7t45jGbbdvrjk" target="_blank">Revista Gaúcha de Enfermagem - SciELO</a>
             </p>
-            <img src="imagem-sae-beneficios.jpg" alt="Benefícios da SAE" class="imagem-borda" />
+            <img src="imagem-sae-beneficios.jpeg" alt="Benefícios da SAE" class="imagem-borda" />
         </section>
 
         <section id="desafios" class="desafios">
@@ -59,7 +59,7 @@
                 <strong>Fonte:</strong>
                 <a href="https://www.scielo.br/j/ean/a/hCMd9nm7tSRS7WzfdSBMFxF" target="_blank">Escola Anna Nery - SciELO</a>
             </p>
-            <img src="imagem-sae-desafios.jpg" alt="Desafios na SAE" class="imagem-borda" />
+            <img src="imagem-sae-desafios.jpeg" alt="Desafios na SAE" class="imagem-borda" />
         </section>
 
         <section id="educacao" class="educacao">
@@ -71,7 +71,7 @@
                 <strong>Fonte:</strong>
                 <a href="https://seer.unirio.br/cuidadofundamental/article/view/1082" target="_blank">Revista de Pesquisa Cuidado é Fundamental - UNIRIO</a>
             </p>
-            <img src="imagem-sae-educacao.jpg" alt="Educação continuada em enfermagem" class="imagem-borda" />
+            <img src="imagem-sae-educacao.jpeg" alt="Educação continuada em enfermagem" class="imagem-borda" />
         </section>
 
         <section id="equipe" class="equipe">
@@ -83,7 +83,7 @@
                 <strong>Fonte:</strong>
                 <a href="https://www.scielo.br/j/ean/a/7swh6wDYxNqbsVrprBF7CcN" target="_blank">Escola Anna Nery - SciELO</a>
             </p>
-            <img src="imagem-sae-equipe.jpg" alt="Equipe de enfermagem" class="imagem-borda" />
+            <img src="imagem-sae-equipe.jpeg" alt="Equipe de enfermagem" class="imagem-borda" />
         </section>
 
         <section id="caso" class="caso">
@@ -109,7 +109,7 @@
                 <li><strong>5. Envolvimento da família:</strong> orientar neta sobre cuidados, medicação, segurança, participação nas intervenções.</li>
                 <li><strong>6. Orientações ao paciente:</strong> tomar medicação corretamente, evitar quedas, manter rotina de sono, atividades cognitivas, procurar ajuda em caso de piora.</li>
             </ul>
-            <img src="imagem-sae-caso.jpg" alt="Estudo de caso Dona Elza" class="imagem-borda" />
+            <img src="imagem-sae-caso.jpeg" alt="Estudo de caso Dona Elza" class="imagem-borda" />
             <p><strong>Fonte:</strong> Estudo de caso apresentado em sala de aula (2025).</p>
         </section>
 
