--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
             <p>
                 A Sistematização da Assistência de Enfermagem (SAE) é uma ferramenta fundamental para a organização do trabalho profissional da enfermagem. Ela orienta o cuidado individualizado, documenta a prática e fortalece a identidade da profissão.
             </p>
-            <img src="imagem-sae-introducao.jpg" alt="Ilustração sobre SAE" class="imagem-borda" />
+            <img src="imagem-sae-introducao.webp" alt="Ilustração sobre SAE" class="imagem-borda" />
         </section>
 
         <section id="etapas" class="etapas">
