--- a/Index.html
+++ b/Index.html
@@ -119,19 +119,19 @@
                 ROSSETTO, Édina Gonçalves et al.
                 <strong>Percepção de enfermeiros sobre os benefícios da Sistematização da Assistência de Enfermagem.</strong>
                 Revista Gaúcha de Enfermagem, Porto Alegre, v. 36, n. 2, p. 102-109, 2015. Disponível em:
-                <a href="https://www.scielo.br/j/rgenf/a/JFrrJZZtSQ7t45jGbbdvrjk" target="_blank">https://www.scielo.br/j/rgenf/a/JFrrJZZtSQ7t45jGbbdvrjk</a>. Acesso em: 18 mar. 2023.
+                <a href="https://www.scielo.br/j/rgenf/a/JFrrJZZtSQ7t45jGbbdvrjk" target="_blank">https://www.scielo.br</a>. Acesso em: 18 mar. 2023.
             </p>
             <p>
                 ROCHA, Ana Paula Silva; SILVA, Edilane Cristina da; SILVA, Janeina Rosendo da.
                 <strong>Desafios na implantação da Sistematização da Assistência de Enfermagem em uma unidade básica de saúde.</strong>
                 Escola Anna Nery, Rio de Janeiro, v. 24, n. 4, 2020. Disponível em:
-                <a href="https://www.scielo.br/j/ean/a/hCMd9nm7tSRS7WzfdSBMFxF" target="_blank">https://www.scielo.br/j/ean/a/hCMd9nm7tSRS7WzfdSBMFxF</a>. Acesso em: 18 mar. 2023.
+                <a href="https://www.scielo.br/j/ean/a/hCMd9nm7tSRS7WzfdSBMFxF" target="_blank">https://www.scielo.br</a>. Acesso em: 18 mar. 2023.
             </p>
             <p>
                 LIMA, Dalva Maria Batista; CAMPOS, Ana Maria; NUNES, Valéria Lopes.
                 <strong>Capacitação profissional e Sistematização da Assistência de Enfermagem.</strong>
                 Revista de Pesquisa Cuidado é Fundamental Online, Rio de Janeiro, v. 9, n. 4, 2017. Disponível em:
-                <a href="https://seer.unirio.br/cuidadofundamental/article/view/1082" target="_blank">https://seer.unirio.br/cuidadofundamental/article/view/1082</a>. Acesso em: 18 mar. 2023.
+                <a href="https://seer.unirio.br/cuidadofundamental/article/view/1082" target="_blank">https://seer.unirio.br</a>. Acesso em: 18 mar. 2023.
             </p>
             <p>
                 <strong>Outras fontes:</strong> <a href="https://www.scielo.br/j/ean/a/7swh6wDYxNqbsVrprBF7CcN" target="_blank">Escola Anna Nery</a>.
